<resources>
    <string name="app_name">AI PLAN</string>
    <string name="action_settings">Settings</string>
    <string name="nume_hint_add_act">Activity name</string>
    <string name="but_data_add_act">Date</string>
    <string name="but_ora_add_act">Hour</string>
    <string name="dinamic_add_act">Dynamic activity</string>
    <string name="durata_add_act">Duration</string>
    <string name="tv1_add_act">Name:</string>
    <string name="tv2_add_act">Start date:</string>
    <string name="tv3_add_act">End date:</string>
    <string name="tv4_add_act">Type:</string>
    <string name="tv5_add_act">Duration:</string>
    <string name="tv6_add_act">Deadline:</string>
    <string name="hours_duration_dial_frag">Hours:</string>
    <string name="minutes_duration_dial_frag">Minutes:</string>
    <string name="obligatoriu">Obligatoriu</string>
    <string name="current_date">April, 2017</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>


    <string name="title_activity_navigation">Navigation</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="logout">Log out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="st_date_add_act">Start date</string>
    <string name="st_date2_add_act">Duration</string>
    <string name="end_date_add_act">End date</string>
    <string name="end_date2_add_act">Deadline</string>
    <string name="location_add_act">Location</string>
    <string name="obligatoriu_add_act">Obligatory</string>
    <string name="static_add_act">Static</string>
    <string name="static2_add_act">Dynamic</string>
    <string name="notificare_add_act">Notifications</string>
    <string name="nota_add_act">Add a note for the activity here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="luni">Monday</string>
    <string name="marti">Tuesday</string>
    <string name="miercuri">Wednesday</string>
    <string name="joi">Thursday</string>
    <string name="vinery">Friday</string>
    <string name="sambata">Saturday</string>
    <string name="duminica">Sunday</string>

    <string name="time_12am">12 am</string>
    <string name="time_1am">1 am</string>
    <string name="time_2am">2 am</string>
    <string name="time_3am">3 am</string>
    <string name="time_4am">4 am</string>
    <string name="time_5am">5 am</string>
    <string name="time_6am">6 am</string>
    <string name="time_7am">7 am</string>
    <string name="time_8am">8 am</string>
    <string name="time_9am">9 am</string>
    <string name="time_10am">10 am</string>
    <string name="time_11am">11 am</string>
    <string name="time_12pm">12 pm</string>
    <string name="time_13pm">13 pm</string>
    <string name="time_14pm">14 pm</string>
    <string name="time_15pm">15 pm</string>
    <string name="time_16pm">16 pm</string>
    <string name="time_17pm">17 pm</string>
    <string name="time_18pm">18 pm</string>
    <string name="time_19pm">19 pm</string>
    <string name="time_20pm">20 pm</string>
    <string name="time_21pm">21 pm</string>
    <string name="time_22pm">22 pm</string>
    <string name="time_23pm">23 pm</string>
    <string name="time_24pm">24 pm</string>
    <string name="birth_day">I am going to birthday party</string>
    <string name="current_day">20</string>
    <string name="current_day_name">Saturday</string>
    <string name="current_month">January</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locatie_hint_add_act">Location</string>
    <string name="save_changes">Save changes</string>
    <string name="delete">Delete</string>
</resources>
