<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adrian.git.EventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEvtAct"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/inputActionBar"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/numeEvtAct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:text="@string/nume_hint_add_act"
        android:background="@color/culoareIulia2"
        app:layout_constraintBottom_toTopOf="@+id/stDateEvtAct"
        app:layout_constraintLeft_toLeftOf="@+id/guideDr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEvtAct"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stDateEvtAct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/st_date_add_act"
        android:background="@color/culoareIulia3"
        app:layout_constraintBottom_toTopOf="@+id/locatieEvtAct"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="@+id/guideDr"
        app:layout_constraintRight_toLeftOf="@+id/endDateEvtAct"
        app:layout_constraintTop_toBottomOf="@+id/numeEvtAct"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/endDateEvtAct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/end_date_add_act"
        android:background="@color/culoareIulia3"
        app:layout_constraintBottom_toBottomOf="@+id/stDateEvtAct"
        app:layout_constraintLeft_toRightOf="@+id/stDateEvtAct"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stDateEvtAct"
        app:layout_constraintVertical_bias="0.556" />

    <TextView
        android:id="@+id/locatieEvtAct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/culoareIulia1"
        android:ems="10"
        android:text="@string/locatie_hint_add_act"
        app:layout_constraintBottom_toTopOf="@+id/staticEvtAct"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideDr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stDateEvtAct" />

    <TextView
        android:id="@+id/staticEvtAct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/culoareIulia2"
        android:text="@string/static_add_act"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/notificatieEvtAct"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideDr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locatieEvtAct" />

    <TextView
        android:id="@+id/notificatieEvtAct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/culoareIulia3"
        android:text="@string/notificare_add_act"
        app:layout_constraintBottom_toTopOf="@+id/notaEvtAct"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideDr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticEvtAct" />

    <TextView
        android:id="@+id/notaEvtAct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/culoareIulia1"
        android:ems="10"
        android:text="@string/nota_add_act"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideDr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificatieEvtAct" />

    <android.support.constraint.Guideline
        android:id="@+id/guideSt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <android.support.constraint.Guideline
        android:id="@+id/guideDr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/linieEvtAct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:minWidth="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideSt"
        app:layout_constraintRight_toLeftOf="@+id/guideDr"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEvtAct"
        app:srcCompat="@drawable/line_1" />

    <ImageView
        android:id="@+id/numeImgEvtAct"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_view_add_act"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/numeEvtAct"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideSt"
        app:layout_constraintTop_toTopOf="@+id/numeEvtAct"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/nume" />

    <ImageView
        android:id="@+id/dataImgEvtAct"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_view_add_act"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/stDateEvtAct"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideSt"
        app:layout_constraintTop_toTopOf="@+id/stDateEvtAct"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/timp" />

    <ImageView
        android:id="@+id/locatieImgEvtAct"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_view_add_act"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/locatieEvtAct"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideSt"
        app:layout_constraintTop_toTopOf="@+id/locatieEvtAct"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/locatie" />

    <ImageView
        android:id="@+id/staticImgEvtAct"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_view_add_act"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/staticEvtAct"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideSt"
        app:layout_constraintTop_toTopOf="@+id/staticEvtAct"
        app:srcCompat="@drawable/movie"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/notificatieImgEvtAct"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_view_add_act"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/notificatieEvtAct"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideSt"
        app:layout_constraintTop_toTopOf="@+id/notificatieEvtAct"
        app:srcCompat="@drawable/mail" />

    <ImageView
        android:id="@+id/notaImgEvtAct"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_view_add_act"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/notaEvtAct"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideSt"
        app:layout_constraintTop_toTopOf="@+id/notaEvtAct"
        app:srcCompat="@drawable/nota" />

</android.support.constraint.ConstraintLayout>
